Update User post
Update User post

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>跟著我們探索吉爾吉斯</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="guest.review.css" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
@@ -156,7 +157,7 @@
           <a href="eight-days-tour.html">
             <div class="tour-col">
               <img loading="lazy" src="images/autmn-tours.jpg" alt="" />
-              <h4>8天秋 客製化行程</h4>
+              <h4>8天秋 客製化行程 coming soon!</h4>
               <div class="tour-days">
                 <i class="fa fa-location-arrow"></i>
                 <p>8 Days Trip</p>
@@ -215,12 +216,169 @@
       </div>
     </section>
 
+    <!---------- Guests review  ----------->
+    <section class="testimonial g-testimonial">
+      <div class="slider-container swiper">
+        <div class="testimonial-title">
+          <h1>Guests post</h1>
+          <p>Follow link to read</p>
+        </div>
+        <div class="slider-content">
+          <div class="g-card-wrapper swiper-wrapper">
+            <div class="g-card swiper-slide">
+              <a
+                href="https://www.facebook.com/share/p/RPdGPMdqruQNqepm/"
+                target="_blank"
+              >
+                <div class="g-image-content">
+                  <span class="overlay"></span>
+                  <div class="g-card-image">
+                    <img
+                      loading="lazy"
+                      src="guest-img/icon-user-post-1.jpg"
+                      class="g-card-img"
+                      alt=""
+                    />
+                  </div>
+                  <h2 class="name g-name">唐宏安 (旅遊達人)</h2>
+                </div>
+                <div class="g-card-content">
+                  <p class="g-testimonial-description">
+                    在被稱為「中亞瑞士」的吉爾吉斯，體驗到人生最美好的一次騎行。
+                    我們在köl-suu lake 湖區住了一晚，準備明日騎馬去看湖。
+                    這個區域的海拔已經超過3000米...
+                  </p>
+                </div>
+                <div class="g-image-content">
+                  <img
+                    loading="lazy"
+                    src="guest-img/user-post-1.jpg"
+                    class="g-post-img"
+                    alt=""
+                  />
+                  <span class="overlay"></span>
+                </div>
+              </a>
+            </div>
+
+            <div class="g-card swiper-slide">
+              <a
+                href="https://www.facebook.com/share/p/dLADCTza4MzdFeqb/"
+                target="_blank"
+              >
+                <div class="g-image-content">
+                  <span class="overlay"></span>
+                  <div class="g-card-image">
+                    <img
+                      loading="lazy"
+                      src="guest-img/icon-user-post-1.jpg"
+                      class="g-card-img"
+                      alt=""
+                    />
+                  </div>
+                  <h2 class="name g-name">唐宏安 (旅遊達人)</h2>
+                </div>
+                <div class="g-card-content">
+                  <p class="g-testimonial-description">
+                    在吉爾吉斯當一回鷹獵人。
+                    與鷹相處，自己的態度很重要，要有親密的連結，卻也要同時具備威嚴，鷹才會服從。—鷹獵人。
+                  </p>
+                </div>
+                <div class="g-image-content">
+                  <img
+                    loading="lazy"
+                    src="guest-img/user-post-2.jpg"
+                    class="g-post-img"
+                    alt=""
+                  />
+                  <span class="overlay"></span>
+                </div>
+              </a>
+            </div>
+
+            <div class="g-card swiper-slide">
+              <a
+                href="https://www.facebook.com/share/p/wSjiVpDyReW9dwBV/"
+                target="_blank"
+              >
+                <div class="g-image-content">
+                  <span class="overlay"></span>
+                  <div class="g-card-image">
+                    <img
+                      loading="lazy"
+                      src="guest-img/diqiu-shaoren-icon.jpg"
+                      class="g-card-img"
+                      alt=""
+                    />
+                  </div>
+                  <h2 class="name g-name">地球少年</h2>
+                </div>
+                <div class="g-card-content">
+                  <p class="g-testimonial-description">
+                    吉爾吉斯的草原遊牧民族，也住「蒙古包」？ <br />
+                    先來替蒙古包正名。事實上，蒙古包並不是蒙古族專屬，「蒙古」包這個詞讓我們無意間將他的定義狹隘了。遊牧民族使用的可拆...
+                  </p>
+                </div>
+                <div class="g-image-content">
+                  <img
+                    loading="lazy"
+                    src="guest-img/user-post-yurt.jpg"
+                    class="g-post-img"
+                    alt=""
+                  />
+                  <span class="overlay"></span>
+                </div>
+              </a>
+            </div>
+
+            <div class="g-card swiper-slide">
+              <a
+                href="https://www.facebook.com/share/p/H8qDHBzdAKNqwSvZ/"
+                target="_blank"
+              >
+                <div class="g-image-content">
+                  <span class="overlay"></span>
+                  <div class="g-card-image">
+                    <img
+                      loading="lazy"
+                      src="guest-img/diqiu-shaoren-icon.jpg"
+                      class="g-card-img"
+                      alt=""
+                    />
+                  </div>
+                  <h2 class="name g-name">地球少年</h2>
+                </div>
+                <div class="g-card-content">
+                  <p class="g-testimonial-description">
+                    吉爾吉斯人是遊牧民族，其中也有善獵者，在網上查資料時就有看到這裡有馴養獵鷹、且與他們一同狩獵的「鷹獵人」，非常特色，但要找他們實在太難啦，沒想到這次在bek
+                    ruby...
+                  </p>
+                </div>
+                <div class="g-image-content">
+                  <img
+                    loading="lazy"
+                    src="guest-img/user-post-4.jpg"
+                    class="g-post-img"
+                    alt=""
+                  />
+                  <span class="overlay"></span>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-button-next swiper-navBtn"></div>
+        <div class="swiper-button-prev swiper-navBtn"></div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </section>
+
     <!---------- Testimonial section  ----------->
     <section class="testimonial">
       <div class="slider-container swiper">
         <div class="testimonial-title">
           <h1>來自我們可愛客戶的評論</h1>
-          <p>Review from our lovely clients</p>
+          <p>Reviews from our lovely clients</p>
         </div>
         <div class="slider-content">
           <div class="card-wrapper swiper-wrapper">
@@ -352,69 +510,6 @@
         <div class="swiper-button-next swiper-navBtn"></div>
         <div class="swiper-button-prev swiper-navBtn"></div>
         <div class="swiper-pagination"></div>
-      </div>
-    </section>
-
-    <!---------- Our Youtube Videos  ----------->
-
-    <section class="section-video">
-      <h1>我們的 YouTube 影片</h1>
-      <div class="container">
-        <div class="main-video">
-          <div class="video">
-            <iframe
-              src="https://www.youtube.com/embed/VF0NtS1_uG8?si=RZknnBTKuE9jvI9u"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-            <h3 class="title"></h3>
-            <a
-              class="youtube-hero-btn"
-              href="https://www.youtube.com/channel/UCnxzzziyUQF2QUn3OG0KXCg"
-              target="_blank"
-              ><span>看更多影片</span></a
-            >
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <lite-youtube
-      videoid="VF0NtS1_uG8?si=RZknnBTKuE9jvI9u"
-      params="controls=1"
-    ></lite-youtube>
-
-    <!---------- Why Choose Us  ----------->
-    <section class="why-us">
-      <h1>為什麼選擇我們</h1>
-      <div class="row">
-        <div class="why-col">
-          <img loading="lazy" src="assets/Authentic Adventures 4x.png" alt="" />
-          <h3>Authentic Adventures</h3>
-          <p>沉浸在吉爾吉斯獨特的遊牧文化中 蒙古包住宿和獵鷹表演等體驗。</p>
-        </div>
-        <div class="why-col">
-          <img loading="lazy" src="assets/Professional Guides 4x.png" alt="" />
-          <h3>Professional Guides</h3>
-          <p>
-            在經驗豐富的當地人士的指導下充滿信心地探索
-            了解景觀及其隱藏寶石的專家。
-          </p>
-        </div>
-        <div class="why-col">
-          <img
-            loading="lazy"
-            src="assets/Unforgettable Memories 4x.png"
-            alt=""
-          />
-          <h3>Unforgettable Memories</h3>
-          <p>
-            當您發現未馴服的美麗時，與我們一起創造持久的回憶
-            以及吉爾吉斯豐富的文化。
-          </p>
-        </div>
       </div>
     </section>
 
@@ -637,6 +732,69 @@
         如果您有任何的問題，可以與我們保持聯繫，我們可以盡量提供您相關必要的訊息，謝謝您！）
       </p>
     </section>
+
+    <!---------- Why Choose Us  ----------->
+    <section class="why-us">
+      <h1>為什麼選擇我們</h1>
+      <div class="row">
+        <div class="why-col">
+          <img loading="lazy" src="assets/Authentic Adventures 4x.png" alt="" />
+          <h3>Authentic Adventures</h3>
+          <p>沉浸在吉爾吉斯獨特的遊牧文化中 蒙古包住宿和獵鷹表演等體驗。</p>
+        </div>
+        <div class="why-col">
+          <img loading="lazy" src="assets/Professional Guides 4x.png" alt="" />
+          <h3>Professional Guides</h3>
+          <p>
+            在經驗豐富的當地人士的指導下充滿信心地探索
+            了解景觀及其隱藏寶石的專家。
+          </p>
+        </div>
+        <div class="why-col">
+          <img
+            loading="lazy"
+            src="assets/Unforgettable Memories 4x.png"
+            alt=""
+          />
+          <h3>Unforgettable Memories</h3>
+          <p>
+            當您發現未馴服的美麗時，與我們一起創造持久的回憶
+            以及吉爾吉斯豐富的文化。
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!---------- Our Youtube Videos  ----------->
+
+    <section class="section-video">
+      <h1>我們的 YouTube 影片</h1>
+      <div class="container">
+        <div class="main-video">
+          <div class="video">
+            <iframe
+              src="https://www.youtube.com/embed/VF0NtS1_uG8?si=RZknnBTKuE9jvI9u"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+            <h3 class="title"></h3>
+            <a
+              class="youtube-hero-btn"
+              href="https://www.youtube.com/channel/UCnxzzziyUQF2QUn3OG0KXCg"
+              target="_blank"
+              ><span>看更多影片</span></a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <lite-youtube
+      videoid="VF0NtS1_uG8?si=RZknnBTKuE9jvI9u"
+      params="controls=1"
+    ></lite-youtube>
 
     <!---------- follow us on instagram ----------->
 
