--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
     <section class="testimonial g-testimonial">
       <div class="slider-container swiper">
         <div class="testimonial-title">
-          <h1>Guests post</h1>
-          <p>Follow link to read</p>
+          <h1>客人分享</h1>
+          <p></p>
         </div>
         <div class="slider-content">
           <div class="g-card-wrapper swiper-wrapper">
