--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -184,7 +184,7 @@
           <div class="tph-contact">
             <div class="thp-price">
               <p>from</p>
-              <span class="price">$1.480 </span>
+              <span class="price">$1.680 </span>
               <p>per person</p>
             </div>
             <div class="info-item-btn">
@@ -207,11 +207,12 @@
             </h2>
           </div>
           <div class="description">
-            <h2>拼團一個人也可以參加，今年夏天每個月開一團。</h2>
+            <h2>拼團一個人也可以參加，六到十月每個月開一團。</h2>
             <p>
               &nbsp; &nbsp; 6/17-6/23 七天&nbsp; &nbsp; &nbsp; &nbsp; 7/22 -
               7/29 八天&nbsp; &nbsp; &nbsp; &nbsp; 8/4 - 8/10 七天&nbsp; &nbsp;
-              &nbsp; &nbsp; 9/9-9/15 七天
+              &nbsp; &nbsp; 9/9-9/15 七天 <br />
+              &nbsp; &nbsp; 10/9-10/15 七天&nbsp; &nbsp;
             </p>
             <p class="per-about-p">✅七月和八月行程有加入剛出爐的遊牧節慶</p>
           </div>
@@ -612,12 +613,13 @@
           <div class="price-group-info">
             <h2>經典七天行程</h2>
             <p>✅ 參加跟團費用以總人數計算</p>
-            <p>四人開團 一人費用 1630 USD</p>
+            <p>四人開團 一人費用 1980 USD</p>
             <p>二人開團 一人費用 2480 USD</p>
-            <p>✅ 報價含全程食宿, 交通，中文導遊</p>
-            <p>不含簽證, 機票, 旅平險</p>
+            <p>
+              ✅ 報價含全程食宿， 交通，中文導遊，簽證代辦，機場接送，sim卡一張
+            </p>
 
-            <p>（ 拼團依最多人搭機時間安排一次免費接送）</p>
+            <p>不含機票, 旅平險</p>
           </div>
         </div>
 
@@ -630,37 +632,37 @@
                 - Transportation during full trip
               </li>
               <li>
-                <i class="fa fa-check-square fa-lg"></i> -Airport -Airport
+                <i class="fa fa-check-square fa-lg"></i> - Airport -Airport
                 Pickup+Drop-off
               </li>
               <li>
                 <i class="fa fa-check-square fa-lg"></i>
-                -Accommodation in for 7 nights (twin rooms)
+                - Accommodation in for 7 nights (twin rooms)
               </li>
               <li>
-                <i class="fa fa-check-square fa-lg"></i> -Meals: 7 dinner and 7
+                <i class="fa fa-check-square fa-lg"></i> - Meals: 7 dinner and 7
                 lunches (from Day 1 to Day 7)
               </li>
               <li>
-                <i class="fa fa-check-square fa-lg"></i> -Picnic (Coffee break
+                <i class="fa fa-check-square fa-lg"></i> - Picnic (Coffee break
                 stops) mentioned above
               </li>
               <li>
-                <i class="fa fa-check-square fa-lg"></i> -Horse back riding in
+                <i class="fa fa-check-square fa-lg"></i> - Horse back riding in
                 Chon Kemin
               </li>
               <li>
-                <i class="fa fa-check-square fa-lg"></i> -Eagle hunting show
+                <i class="fa fa-check-square fa-lg"></i> - Eagle hunting show
               </li>
               <li>
-                <i class="fa fa-check-square fa-lg"></i> -Kyrgyz carpet making
+                <i class="fa fa-check-square fa-lg"></i> - Kyrgyz carpet making
                 show
               </li>
               <li>
-                <i class="fa fa-check-square fa-lg"></i> -English Chinese
+                <i class="fa fa-check-square fa-lg"></i> - English Chinese
                 speaking guide
               </li>
-              <li><i class="fa fa-check-square fa-lg"></i> -Entry fees</li>
+              <li><i class="fa fa-check-square fa-lg"></i> - Entry fees</li>
             </ul>
           </div>
 
@@ -670,13 +672,12 @@
             <div class="price-not-included">
               <h3>Price Not Includes</h3>
               <ul>
-                <li><i class="fa fa-times fa-lg"></i> -flight ticket</li>
-                <li><i class="fa fa-times fa-lg"></i> -visa</li>
-                <li><i class="fa fa-times fa-lg"></i> insurance</li>
+                <li><i class="fa fa-times fa-lg"></i> - flight ticket</li>
+                <li><i class="fa fa-times fa-lg"></i> - insurance</li>
                 <li>
                   <i class="fa fa-times fa-lg"></i>
-                  -tips for driver and guide ,one day 10 USD per person. Total 8
-                  days 80 USD per person.
+                  - tips for driver and guide ,one day 10 USD per person. Total
+                  7 days 70 USD per person.
                 </li>
               </ul>
             </div>
@@ -688,22 +689,17 @@
             <h2>預訂注意事項</h2>
             <ol>
               <li>
-                訂金金額：團費300美元每人， <br />
+                訂金金額：團費400美元每人， <br />
                 可選擇匯款美金到吉爾吉斯或是台北桃園面交美金 <br />
                 （旅行社設立在吉爾吉斯，抱歉無法接受台幣匯款） <br />
                 餘額請抵達當地第一天交付美元現金給導遊。
               </li>
 
-              <li>
-                包團會安排一次免費接送機服務。 拼團依最多人抵達和離開的時間，
-                <br />
-                安排一次免費機場接送， 其他時間可以安排付費的機場接送， <br />
-                單程一趟12美金。
-              </li>
+              <li>包團會安排一次免費接送機服務。</li>
 
               <li>
                 台灣護照要申請簽證， 請告知出發的日期。簽證效期一個月。<br />
-                參加團的簽證費用是 70美金 ( 100%通過) 需要 <br />
+                參加團的簽證費用是 100美金 ( 98%通過) 需要 <br />
                 護照影本電子檔和個人照一張 請人用手機拍攝，背景白色即可 <br />
                 （請勿翻拍證件照，不清楚）
               </li>
@@ -720,7 +716,7 @@
 
               <li>
                 本行程可延長住宿天數， 代訂Bishkek Freedom Hotel <br />
-                一晚雙床房62美金。 建議提早一天到。可以休息一下也能市區bazaar
+                一晚雙床房70美金。 建議提早一天到。可以休息一下也能市區bazaar
                 <br />
                 逛逛， 隔天開始充實的七天行程， <br />
                 行程最後一天，約傍晚5-7點結束會送大家回飯店休息， <br />
@@ -736,7 +732,7 @@
               <li>
                 蒙古包四人房，飯店和民宿是雙床房。 拼團會協助同性別安排雙人房，
                 <br />
-                如需要單人房或是無法湊雙數安排， 單人房每晚加價25 美金。
+                如需要單人房或是無法湊雙數安排， 單人房每晚加價40 美金。
               </li>
 
               <li>
@@ -765,7 +761,7 @@
           <div class="cancellation-policy">
             <h2>付款及取消政策</h2>
             <p>
-              報名請支付300美金 訂金 <br />
+              報名請支付400美金 訂金 <br />
               到達當地第一天再支付導遊美金尾款 <br />
               報名後因故不能參加活動時，<br />
               請儘早告知；若於出發前21至30天取消訂單， <br />
