--- a/question-answers.html
+++ b/question-answers.html
@@ -2,6 +2,11 @@
 <html lang="zh-Hant">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="shortcut icon"
+      type="x-icon"
+      href="bek-ruby-logo/bek-ruby-title-logo-2.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>常見的問題 - Q&A</title>
     <link rel="stylesheet" href="style.css" />
