--- a/blog-article-2.html
+++ b/blog-article-2.html
@@ -2,6 +2,11 @@
 <html lang="zh-Hant">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="shortcut icon"
+      type="x-icon"
+      href="bek-ruby-logo/bek-ruby-title-logo-2.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>來吉爾吉斯要自助旅行還是跟團呢？ - Blog</title>
     <link rel="stylesheet" href="style.css" />
