--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html lang="zh-Hant">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="shortcut icon"
+      type="x-icon"
+      href="bek-ruby-logo/bek-ruby-title-logo-2.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>跟著我們探索吉爾吉斯</title>
+
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="blog.css" />
     <link rel="stylesheet" href="guest.review.css" />
