--- a/kyrgyzs-hospitality.html
+++ b/kyrgyzs-hospitality.html
@@ -2,6 +2,11 @@
 <html lang="zh-Hant">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="shortcut icon"
+      type="x-icon"
+      href="bek-ruby-logo/bek-ruby-title-logo-2.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>體驗當地美食 - Local Hospitality</title>
     <link rel="stylesheet" href="style.css" />
