--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -2,6 +2,11 @@
 <html lang="zh-Hant">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="shortcut icon"
+      type="x-icon"
+      href="bek-ruby-logo/bek-ruby-title-logo-2.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>7 天夏 經典行程 - 7 day tours</title>
     <link rel="stylesheet" href="css.main/main.css" />
