--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
         <div class="answer">
           <p>
             本行程可延長住宿天數，代訂Bishkek Freedom Hotel
-            一晚一間房含早餐62美金或是也推薦大家可以在伊賽克湖度假幾天,
+            一晚一間房含早餐70美金或是也推薦大家可以在伊賽克湖度假幾天,
             夏天游泳超棒的喔！
           </p>
         </div>
@@ -708,7 +708,8 @@
         </div>
         <div class="answer">
           <p>
-            七天當中約有2-3天在高山完全沒有訊號，讓自己沈靜在大自然裡休息，徹底放空，享受過程！另外可以幫大家代購網卡，一張七天3美元。
+            七天當中約有2-3天在高山完全沒有訊號，讓自己沈靜在大自然裡休息，徹底放空，享受過程！另外可以幫大家代購網卡，一張七天
+            16GB，10美元。
           </p>
         </div>
       </div>
@@ -729,7 +730,7 @@
         <div class="answer">
           <p>
             兩個月前會確定是否開團， 1填寫報名表格 2 繳交訂金 3
-            提供護照辦理簽證，訂金金額：300美金，每人 Paypal 線上刷卡
+            提供護照辦理簽證，訂金金額：400美金，每人 Paypal 線上刷卡
             （我們的旅行社在吉爾吉斯，無法接受台幣轉帳。餘款請第一天到當地支付美金現金給導遊
           </p>
         </div>
