--- a/eight-days-tour.html
+++ b/eight-days-tour.html
@@ -8,7 +8,7 @@
       href="bek-ruby-logo/bek-ruby-title-logo-2.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>8天秋 客製化行程</title>
+    <title>UZBEKSTAN</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="8-days-tour.css" />
     <link
