--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -76,7 +76,7 @@
 
     <section class="tour-section">
       <div class="gallery-container">
-        <h1>7 Days Best Of Kyrgyzstan</h1>
+        <h1>Poppy Flower Classic 7-Day Tour 罌粟花季 經典七天行程</h1>
 
         <div class="gallery">
           <a class="box a" href="images-7-day-tour-section/arashan-1.jpg">
@@ -212,7 +212,7 @@
           <div class="tph-contact">
             <div class="thp-price">
               <p>from</p>
-              <span class="price">$1.680 </span>
+              <span class="price">$1880 </span>
               <p>per person</p>
             </div>
             <div class="info-item-btn">
@@ -231,16 +231,15 @@
         <div class="description-highlights">
           <div class="description">
             <h2>
-              包團兩人以上成行， 全年隨時出發，行程可依客人興趣微調。 <br />
+              包團兩人以上成行， 4/28-5/28 花季，行程可依客人興趣微調。 <br />
             </h2>
           </div>
           <div class="description">
-            <h2>拼團一個人也可以參加，六到十月每個月開一團。</h2>
+            <h2>拼團一個人也可以參加。</h2>
             <p>
               &nbsp; &nbsp; April 28 - May 6 七天&nbsp; &nbsp; &nbsp; &nbsp; May
               12 - 19 七天&nbsp; &nbsp;
             </p>
-            <p class="per-about-p">✅七月和八月行程有加入剛出爐的遊牧節慶</p>
           </div>
           <div class="description">
             <h2>Description</h2>
@@ -668,15 +667,13 @@
       <section class="important-info">
         <div class="price-for-group-container">
           <div class="price-group-info">
-            <h2>經典七天行程</h2>
-            <p>✅ 參加跟團費用以總人數計算</p>
-            <p>四人開團 一人費用 1980 USD</p>
-            <p>二人開團 一人費用 2480 USD</p>
-            <p>
-              ✅ 報價含全程食宿， 交通，中文導遊，簽證代辦，機場接送，sim卡一張
-            </p>
+            <h2></h2>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
 
-            <p>不含機票, 旅平險</p>
+            <p></p>
           </div>
         </div>
 
