mon 16 Dec low quality img
mon 16 Dec low quality img  update

--- a/index.html
+++ b/index.html
@@ -988,7 +988,10 @@
     <section class="instagram">
       <h1>
         我們的IG:
-        <a target="_blank" href="https://www.instagram.com/bek_ruby/"
+        <a
+          class="bekruby-ig"
+          target="_blank"
+          href="https://www.instagram.com/bek_ruby/"
           >Bek & Ruby</a
         >
       </h1>
