--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -42,6 +42,7 @@
     <script defer src="testimonial.js"></script>
   </head>
   <body>
+    <!---------- Header Section ----------->
     <section class="about-sub-header">
       <nav>
         <a href="index.html"
@@ -510,10 +511,7 @@
             <div class="itinerary-answer">
               <div class="row-2">
                 <div class="about-tour-col">
-                  <img
-                    loading="lazy"
-                    src="/image-itinerary/altyn-arashan.png"
-                  />
+                  <img loading="lazy" src="/image-itinerary/arashan-2.png" />
                 </div>
 
                 <div class="about-tour-col">
